k8s/problem-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problem-ms-deployment
  namespace: codecapable
  labels:
    app: problem-ms
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: problem-ms
  template:
    metadata:
      labels:
        app: problem-ms
        version: "1.0"
    spec:
      containers:
      - name: problem-ms-container
        image: kkatsarski/problem-ms
        readinessProbe:
          httpGet:
            path: /p/health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 15
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 300m
            memory: 521Mi
          requests:
            cpu: 150m
            memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: problem-ms
  name: problem-ms-service
  namespace: codecapable
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: problem-ms
