k8s/user-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-ms-deployment
  namespace: codecapable
  labels:
    app: user-ms
    version: "1.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-ms
  template:
    metadata:
      labels:
        app: user-ms
        version: "1.0"
    spec:
      containers:
      - name: user-ms-container
        image: kkatsarski/user-ms
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        resources:
          limits:
            cpu: 300m
            memory: 521Mi
          requests:
            cpu: 150m
            memory: 256Mi

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-ms
  name: user-ms-service
  namespace: codecapable
spec:
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  selector:
    app: user-ms
